crates/ui/src/widgets/snapshots/ui__widgets__sidebar_nav__tests__sidebar_nav__active_strategies.snap
---
source: crates/ui/src/widgets/sidebar_nav.rs
expression: summary
---
widget: sidebar_nav
width_px: 180
active: Strategies
entries:
  rule=— label=Home screen=Home fg=fg_2
  rule=— label=Debug screen=Debug fg=fg_2
  rule=ACCENT label=Strategies screen=Strategies fg=fg_1
  rule=— label=Risk screen=Risk fg=fg_2
  rule=— label=Audit screen=Audit fg=fg_2
  rule=— label=Charts screen=Charts fg=fg_2
