crates/ui/src/widgets/snapshots/ui__widgets__sidebar_nav__tests__sidebar_nav__phase_c_three_groups.snap
---
source: crates/ui/src/widgets/sidebar_nav.rs
expression: summary
---
widget: sidebar_nav
width_px: 180
active: Lab
--- group 0 ---
  rule=ACCENT label=Lab screen=Lab fg=fg_1
  rule=— label=Live screen=Live fg=fg_2
  rule=— label=Compare screen=Compare fg=fg_2
  rule=— label=Baseline screen=Baseline fg=fg_2
--- group 1 ---
  rule=— label=Strategies screen=Strategies fg=fg_2
  rule=— label=Memory screen=Memory fg=fg_2
  rule=— label=Models screen=Models fg=fg_2
  rule=— label=Reports screen=Reports fg=fg_2
  rule=— label=Trail screen=Trail fg=fg_2
--- group 2 ---
  rule=— label=Settings screen=Settings fg=fg_2
